--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,6 @@ rootProject.name = 'kodilla-course'
 include 'kodilla-testing'
 include 'kodilla-stream'
 include 'kodilla-stream'
+include 'kodilla-stream:kodilla-exception'
+findProject(':kodilla-stream:kodilla-exception')?.name = 'kodilla-exception'
 
