--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,6 @@
 rootProject.name = 'kodilla-course'
 include 'kodilla-testing'
 include 'kodilla-stream'
-include 'kodilla-stream'
-include 'kodilla-stream:kodilla-exception'
-findProject(':kodilla-stream:kodilla-exception')?.name = 'kodilla-exception'
+include 'kodilla-exception'
+include 'kodilla-exception'
 
