--- a/kodilla-spring/build.gradle
+++ b/kodilla-spring/build.gradle
@@ -1,23 +1,11 @@
-buildscript {
-    ext {
-        springBootVersion = '2.1.17.RELEASE'
-    }
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-    }
+plugins {
+    id 'org.springframework.boot'
+    id 'io.spring.dependency-management'
+    id 'java'
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-
-group = 'com.kodilla'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
+group 'com.kodilla'
+version '0.0.1-SNAPSHOT'
 
 repositories {
     mavenCentral()
