--- a/settings.gradle
+++ b/settings.gradle
@@ -9,4 +9,6 @@ findProject(':kodilla-good-patterns:kodilla-spring-intro')?.name = 'kodilla-spri
 include 'kodilla-spring-intro'
 include 'kodilla-spring'
 include 'kodilla-patterns'
+include 'kodilla-jdbc'
+include 'kodilla-hibernate'
 
