--- a/kodilla-patterns2/build.gradle
+++ b/kodilla-patterns2/build.gradle
@@ -19,9 +19,9 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-aop')
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+   // implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+   // implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    compile 'mysql:mysql-connector-java'
+   // compile 'mysql:mysql-connector-java'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
